# pinezka

./: .lefthookrc  .pre-commit-config.yaml  README.md  angular.json  lefthook.toml  package.json  pnpm-lock.yaml
backend/: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
backend/board/: settings.py  urls.py
backend/cities/: models.py  serializers.py
backend/cities/migrations/: 0001_initial.py  0002_add_initial_cities.py
backend/common/: rules.py
backend/posts/: models.py  rules.py  serializers.py  urls.py  views.py
backend/posts/migrations/: 0001_initial.py  0002_add_initial_categories.py  0003_add_initial_posts.py
backend/requirements/: dev.txt
backend/user_management/: views.py
backend/user_management/migrations/: 0001_initial.py  0002_add_initial_users.py  0003_additionalfield.py
board/: settings.py  urls.py
board-backend/: .gitignore  pyproject.toml
board-backend/posts/: models.py  serializers.py  views.py
board-backend/posts/migrations/: 0001_initial.py  0003_add_initial_posts.py  0005_alter_post_expiry.py
board-backend/user_management/: rules.py  serializers.py
board-frontend/: README.md  package.json  pnpm-lock.yaml
board-frontend/src/: index.html
cities/: serializers.py  urls.py  views.py
cities/migrations/: 0002_add_initial_cities.py
frontend/: README.md  angular.json  eslint.config.js  package.json  pnpm-lock.yaml
posts/: models.py  serializers.py  views.py
public/i18n/: en.json
requirements/: base.txt
src/: index.html
user_management/: authentication.py  models.py  serializers.py  urls.py  views.py
(+176 files in other folders)
